--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -40,10 +40,10 @@
                                     <div class="col-md-12 mt-2 mb-3">
                                         <h4 class="border border-dark border-w-2 rounded p-3">Persoonlijke gegevens</h4>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-2 col-md-3 col-sm-6 form-group">
                                         <label for="initials">Voorletters</label>
                                         <input class="form-control" id="initials"
-                                               maxlength="10"
+                                               maxlength="15"
                                                name="initials"
                                                pattern="^([\s.]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
                                                patternMismatch="Gebruik alleen hoofdletters, punten of spaties."
@@ -51,15 +51,15 @@
                                                th:field="*{initials}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-3 col-md-5 col-sm-6 form-group">
                                         <label for="firstname">Voornaam</label>
-                                        <input class="form-control" id="firstname" maxlength="15" name="firstName"
+                                        <input class="form-control" id="firstname" maxlength="25" name="firstName"
                                                pattern="^([-\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
                                                patternMismatch="Gebruik alleen hoofdletters, kleine letters, streepjes of spaties."
                                                required th:field="*{firstName}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-2 col-md-4 col-sm-4 form-group">
                                         <label for="preposition">Tussenvoegsel</label>
                                         <input class="form-control" id="preposition" maxlength="15" name="preposition"
                                                pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
@@ -67,7 +67,7 @@
                                                th:field="*{preposition}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-5 col-md-6 col-sm-8 form-group">
                                         <label for="lastname">Achternaam</label>
                                         <input class="form-control" id="lastname" maxlength="45" name="surName"
                                                pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
@@ -75,7 +75,7 @@
                                                required th:field="*{surName}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-3 col-md-4 col-sm-6 form-group">
                                         <label for="dateOfBirth">Geboortedatum</label>
                                         <input aria-describedby="dateOfBirthHelp" class="form-control" id="dateOfBirth"
                                                name="dateOfBirth" pattern="^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
@@ -83,7 +83,7 @@
                                                type="date"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-3 col-md-4 col-sm-6 form-group">
                                         <label for="socialSecurityNumber">Burgerservicenummer (BSN)</label>
                                         <input aria-describedby="socialSecurityNumberHelp" class="form-control"
                                                id="socialSecurityNumber" maxlength="9" minlength="8"
@@ -92,13 +92,13 @@
                                                required th:field="*{socialSecurityNumber}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-6 col-md-6 col-sm-8 form-group">
                                         <label for="email">Emailadres</label>
                                         <input class="form-control" id="email" maxlength="45" name="email" required
                                                th:field="*{email}" type="email"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-3 col-md-4 col-sm-4 form-group">
                                         <label for="mobile">Telefoon (mobiel)</label>
                                         <input aria-describedby="mobileHelp" class="form-control" id="mobile"
                                                maxlength="11" name="mobile" pattern="^[06]{2}-[0-9]{8}$"
@@ -143,7 +143,7 @@
                                     <div class="col-md-12 mt-5 mb-3">
                                         <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-xl-3 col-lg-3 col-md-4 form-group">
                                         <label for="username_private">Gebruikersnaam</label>
                                         <input class="form-control" id="username_private"
                                                maxlength="16" minlength="4" name="userName"
@@ -152,7 +152,7 @@
                                                required th:field="*{userName}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-xl-3 col-lg-3 col-md-4 form-group">
                                         <label for="password_private">Wachtwoord</label>
                                         <input class="form-control" id="password_private"
                                                matchField="passwordConfirmation" maxlength="16" minlength="6"
@@ -162,7 +162,7 @@
                                                required th:field="*{password}" type="password"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-xl-3 col-lg-3 col-md-4 form-group">
                                         <label for="password_private_confirmation">Bevestig wachtwoord</label>
                                         <input class="form-control" id="password_private_confirmation"
                                                matchField="password" maxlength="16" minlength="6"
@@ -191,13 +191,13 @@
                                     <div class="col-md-12 mt-2 mb-3">
                                         <h4 class="border border-dark border-w-2 rounded p-3">Bedrijfsgegevens</h4>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-4 col-md-6 col-sm-6 form-group">
                                         <label for="companyName">Bedrijfsnaam</label>
                                         <input class="form-control" id="companyName" maxlength="45"
                                                name="companyName" required th:field="*{companyName}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-4 col-md-6 col-sm-6 form-group">
                                         <label for="sector">Sector</label>
                                         <select class="form-control" id="sector" name="sector" th:field="*{sector}"
                                                 th:required="true">
@@ -207,7 +207,7 @@
                                         </select>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-4 col-md-6 col-sm-6 form-group">
                                         <label for="kvkNumber">KvK-nummer</label>
                                         <input class="form-control" id="kvkNumber" maxlength="8" minlength="8"
                                                name="kvkNumber"
@@ -219,11 +219,11 @@
                                                type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-4 col-md-6 col-sm-6 form-group">
                                         <label for="vatNumber">Btw-nummer</label>
                                         <input class="form-control" id="vatNumber"
                                                name="vatNumber" pattern="^(NL)?[0-9]{9}B[0-9]{2}$"
-                                               patternMismatch="Een geldig Btw-nummer heeft format: NL123456789B01"
+                                               patternMismatch="Btw-nummer invoeren met format: NL123456789B01"
                                                required
                                                th:field="*{vatNumber}" type="text"/>
                                         <div class="invalid-feedback"></div>
@@ -231,7 +231,7 @@
                                     <div class="col-md-12 mt-5 mb-3">
                                         <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-2 col-md-3 col-sm-6 form-group">
                                         <label for="postalCode_legal">Postcode</label>
                                         <input aria-describedby="postalCodeHelp" class="form-control"
                                                id="postalCode_legal"
@@ -241,7 +241,7 @@
                                                type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-lg-2 col-md-3 col-sm-6 form-group">
                                         <label for="homeNumber_legal">Huisnr.</label>
                                         <input class="form-control" id="homeNumber_legal"
                                                maxlength="10" name="homeNumber" pattern="([-.,&_`() ]|[A-z0-9])+"
@@ -249,14 +249,14 @@
                                                required th:field="*{homeNumber}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-4 col-md-6 col-sm-6 form-group">
                                         <label for="street_legal">Straat</label>
                                         <input class="form-control" id="street_legal" maxlength="45" name="street"
                                                pattern="^.*[\w\d\s]$" patternMismatch="Ongeldige straatnaam." required
                                                th:field="*{street}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-4 form-group">
+                                    <div class="col-lg-4 col-md-6 col-sm-6 form-group">
                                         <label for="residence_legal">Woonplaats</label>
                                         <input class="form-control" id="residence_legal" maxlength="45" name="residence"
                                                pattern="([\d\w])+" patternMismatch="Ongeldige plaatsnaam."
@@ -266,7 +266,7 @@
                                     <div class="col-md-12 mt-5 mb-3">
                                         <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-xl-3 col-lg-3 col-md-4 form-group">
                                         <label for="username_legal">Gebruikersnaam</label>
                                         <input class="form-control" id="username_legal"
                                                maxlength="16" minlength="4" name="userName"
@@ -275,7 +275,7 @@
                                                required th:field="*{userName}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-xl-3 col-lg-3 col-md-4 form-group">
                                         <label for="password_legal">Wachtwoord</label>
                                         <input class="form-control" id="password_legal"
                                                matchField="passwordConfirmation" maxlength="16" minlength="6"
@@ -285,7 +285,7 @@
                                                required th:field="*{password}" type="password"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
-                                    <div class="col-md-2 form-group">
+                                    <div class="col-xl-3 col-lg-3 col-md-4 form-group">
                                         <label for="password_legal_confirmation">Bevestig wachtwoord</label>
                                         <input class="form-control" id="password_legal_confirmation"
                                                matchField="password" maxlength="16" minlength="6"
