--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -145,20 +145,27 @@
             </div>
 
 
-            <div class="container pt-0" th:each="t : ${account.getTransactions}" >
+            <div class="container pt-0" >
+
+                <div th:each="entry, stat : ${accountWithTransactionsBydate}">
+
+                <div class="card"  th:text="${entry.key}">
+                    th:each="transaction : ${entry.value}"
+                    th:text="${accountWithTransactions}"
 
                 <!--Accordion wrapper-->
-                <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false" th:each="date :${t.showDate}">
+                <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false">
 
                     <!-- Accordion card -->
                     <div class="card"  style="border-color: #312783;border-width: medium
-                         ;background-color: white">
+                         ;background-color: white" >
 
                         <!-- Card header -->
-                        <div class="card-header" role="tab" id="transaction" >
+                        <div class="card-header" role="tab" id="transaction" th:each="{entry.value}" th:text="${value}">
+
                             <a data-toggle="collapse" href="#collapse" aria-expanded="false"
                                aria-controls="collapseOne1">
-                                <h4> <span class="mb-0" style="color: #F39200"  th:text="${date}">Datum></span>
+                                <h4>
                                 <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>
                                 </h4>
                                 <h5>
@@ -184,6 +191,8 @@
                 <!-- Accordion wrapper -->
                <br>
 
+                </div>
+            </div>
 
             </div>
 
