--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -138,20 +138,19 @@
         <div class="col-md-8">
 
             <div class="container pt-0">
-                <div th:if="${account.getTransactions().isEmpty()}">
+                <div th:if="${accountWithTransactionsByDate.isEmpty()}">
                     <p style="font-size: 200%; color: #F39200" align="center"
                     >Er zijn geen bij- en/of afschrijvingen om weer te geven.</p>
                 </div>
             </div>
 
 
-            <div class="container pt-0" >
+            <div class="container pt-0" th:block th:each="date  : ${accountHasTransactionsDTO.getTransactionListByDate()}">
 
-                <div th:each="entry, stat : ${accountWithTransactionsBydate}">
 
-                <div class="card"  th:text="${entry.key}">
-                    th:each="transaction : ${entry.value}"
-                    th:text="${accountWithTransactions}"
+
+
+
 
                 <!--Accordion wrapper-->
                 <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false">
@@ -161,17 +160,17 @@
                          ;background-color: white" >
 
                         <!-- Card header -->
-                        <div class="card-header" role="tab" id="transaction" th:each="{entry.value}" th:text="${value}">
+                        <div class="card-header" role="tab" id="transaction" >
 
                             <a data-toggle="collapse" href="#collapse" aria-expanded="false"
                                aria-controls="collapseOne1">
-                                <h4>
+                                <h4> <span class="mb-0" style="color: #F39200"  th:text="${date.key}">Datum></span>
                                 <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>
                                 </h4>
                                 <h5>
                                     <dl class="row">
-                                        <dt class="col-md-10" style="color: #312783" th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" ></dt>
-                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.showAmount}"th:text="${amount}"></dd>
+<!--                                        <dt class="col-md-10" style="color: #312783" th:block th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" ></dt>-->
+<!--                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:block th:each="amount :${t.showAmount}"th:text="${amount}"></dd>-->
                                     </dl>
                                 </h5>
                             </a>
@@ -191,10 +190,11 @@
                 <!-- Accordion wrapper -->
                <br>
 
-                </div>
+
             </div>
 
             </div>
+
 
         </div>
 
