--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -144,42 +144,42 @@
                 </div>
             </div>
 
+            <th:block class="container pt-0"th:each="entry : ${accountWithTransactionsByDate}">
 
-            <div class="container pt-0" th:block th:each="date  : ${accountHasTransactionsDTO.getTransactionListByDate()}">
-
-
-
-
-
-
-                <!--Accordion wrapper-->
+<!--            Accordion wrapper-->
                 <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false">
+
+                    <h4>
+                        <span class="mb-0" style="color: #F39200"  th:value="${entry.key}" th:text="${entry.key}">Datum></span>
+                    </h4>
 
                     <!-- Accordion card -->
                     <div class="card"  style="border-color: #312783;border-width: medium
-                         ;background-color: white" >
+                         ;background-color: white" th:if="${not #lists.isEmpty(accountWithTransactionsByDate)}" th:each="t : ${entry.value}">
+
 
                         <!-- Card header -->
-                        <div class="card-header" role="tab" id="transaction" >
-
-                            <a data-toggle="collapse" href="#collapse" aria-expanded="false"
-                               aria-controls="collapseOne1">
-                                <h4> <span class="mb-0" style="color: #F39200"  th:text="${date.key}">Datum></span>
-                                <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>
-                                </h4>
-                                <h5>
-                                    <dl class="row">
-<!--                                        <dt class="col-md-10" style="color: #312783" th:block th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" ></dt>-->
-<!--                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:block th:each="amount :${t.showAmount}"th:text="${amount}"></dd>-->
+                        <div >
+                            <h5>
+                                <th:block>
+                                        <div class = card-header tyle="border-color: #312783;border-width: medium
+                                                ;background-color: white">
+                                            <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>
+                                    <dl data-toggle="collapse" href="#collapse" aria-expanded="false"
+                                        aria-controls="collapseOne1">
+                                        <dt class="col-md-10" style="color: #312783" th:each="name : ${t.contraAccountHolderNames}" th:text="${name}" ></dt>
+                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.amount}"th:text="${t.showAmount()}"></dd>
                                     </dl>
-                                </h5>
-                            </a>
+                                        </div>
+                                </th:block>
+                            </h5>
+
                         </div>
 
                         <!-- Card body -->
                         <div id="collapse" class="collapse hide" role="tabpanel" aria-labelledby="heading">
                             <div class="card-body" style="background-color: rgba(243, 146, 0, 0.2)">
-                                <p style="color: #312783" th:text="${t.showTransactionDetails()}"></p>
+                                <p style="color: #312783; font-size: large" th:each="description : ${t.description}" th:text="${t.showTransactionDetails()}"> </p>
                             </div>
                         </div>
 
@@ -191,7 +191,7 @@
                <br>
 
 
-            </div>
+            </th:block>
 
             </div>
 
